# llvm-ir-dumper

./: .clang-format  .clangd  .cmake-format.py  .gitmodules  CMakeLists.txt  LLVM_Pass_dumper.cpp  README.md  dump.dot
dev/: .clangd
dev/scripts/: build.sh
dumper/sources/: dumper_llvm_pass_plugin.cpp
examples/calc/O0/dot/: after_static.dot  before_dynamic.dot
examples/calc/O0/json/: before_dynamic.json  before_static.json
examples/calc/O0/llvm_ir/: after_opt.ll
examples/calc/O3/dot/: after_dynamic.dot  after_static.dot
examples/calc/O3/json/: after_dynamic.json  after_static.json
examples/calc/O3/llvm_ir/: after_opt.ll  before_opt.ll
examples/calc/dot/: after_opt.dot  before_opt.dot
examples/calc/llvm_ir/: after_opt.ll  before_opt.ll
examples/exp/O0/dot/: after_static.dot  before_dynamic.dot
examples/exp/O0/json/: before_dynamic.json  before_static.json
examples/exp/O0/llvm_ir/: after_opt.ll
examples/exp/O1/dot/: after_dynamic.dot  after_static.dot  before_dynamic.dot  before_static.dot
examples/exp/O1/json/: after_dynamic.json  after_static.json  before_dynamic.json  before_static.json
examples/exp/O1/llvm_ir/: after_opt.ll  before_opt.ll
examples/exp1/O1/: out
examples/exp1/O1/dot/: after_opt.dot  before_opt.dot
examples/exp1/O1/llvm_ir/: after_opt.ll  before_opt.ll
examples/exp1/O2/: out
examples/exp1/O2/dot/: after_opt.dot  before_opt.dot
examples/exp1/O2/llvm_ir/: after_opt.ll  before_opt.ll
examples/exp2/O1/: out
examples/exp2/O1/dot/: after_opt.dot  before_opt.dot
examples/exp2/O1/llvm_ir/: after_opt.ll  before_opt.ll
examples/exp2/O2/: out
examples/exp2/O2/dot/: after_opt.dot  before_opt.dot
examples/exp2/O2/llvm_ir/: after_opt.ll  before_opt.ll
examples/fact/O0/dot/: after_static.dot  before_dynamic.dot
examples/fact/O0/json/: after_dynamic.json  after_static.json
examples/fact/O0/llvm_ir/: after_opt.ll
examples/fact/O1/: out
examples/fact/O1/dot/: after_opt.dot  after_opt_profiled.dot  before_opt.dot  before_static.dot
examples/fact/O1/json/: after_dynamic.json  after_opt.json  after_opt_profiled.json  after_static.json  before_opt.json
examples/fact/O1/llvm_ir/: after_opt.ll  before_opt.ll
examples/fact/O2/: fact.c  out
examples/fact/O2/dot/: after_opt.dot  after_static.dot  before_opt.dot
examples/fact/O2/json/: after_dynamic.json
examples/fact/O2/llvm_ir/: after_opt.ll  before_opt.ll
examples/fact/O3/dot/: after_dynamic.dot  before_dynamic.dot
examples/fact/O3/llvm_ir/: after_opt.ll
examples/fact/Ofast/json/: after_static.json  before_dynamic.json
examples/fact/Ofast/llvm_ir/: after_opt.ll  before_opt.ll
examples/fact/Og/dot/: after_dynamic.dot  after_static.dot
examples/fact/Og/json/: before_static.json
examples/fact/Og/llvm_ir/: after_opt.ll
examples/fact/Os/dot/: after_dynamic.dot  after_static.dot
examples/fact/Os/json/: after_dynamic.json  after_static.json  before_static.json
examples/fact/Os/llvm_ir/: after_opt.ll  before_opt.ll
examples/fact/Oz/dot/: after_dynamic.dot  after_static.dot  before_dynamic.dot  before_static.dot
examples/fact/Oz/json/: after_dynamic.json  after_static.json  before_dynamic.json
examples/fact/Oz/llvm_ir/: after_opt.ll  before_opt.ll
examples/fact/dot/: after_opt.dot  before_opt.dot
examples/fact/llvm_ir/: after_opt.ll  before_opt.ll
examples/factO1/dot/: after_opt.dot  before_opt.dot
examples/factO1/llvm_ir/: after_opt.ll  before_opt.ll
examples/hello/: out
examples/hello/dot/: after_opt.dot  before_opt.dot
examples/hello/json/: after_opt.json  before_opt.json
examples/hello/llvm_ir/: after_opt.ll  before_opt.ll
examples/my_test/: my_test.c
examples/my_test/dot/: after_opt.dot  before_opt.dot
examples/my_test/llvm_ir/: after_opt.ll
examples/my_test2/: my_test.c
examples/my_test2/dot/: after_opt.dot  before_opt.dot
examples/my_test2/llvm_ir/: after_opt.ll  before_opt.ll
examples/test/: out
examples/test/dot/: after_opt.dot  before_opt.dot
examples/test/llvm_ir/: after_opt.ll  before_opt.ll
include/dot_graph/: graph.h
include/ir_graph/: ir_graph.h  ir_graph_builder.h  ir_graph_profile.h  ir_graph_serde.h  ir_graph_to_dot.h
include/llvm_ir_dumper/: cl_opt_expansion.h  dumper_pass.h  inject_pass.h
include/llvm_pass/: dynamic_info_pass.h  llvm_cl_opt_expansion.h  static_info_pass.h
scripts/: build.sh  build_plugin.sh  clean.sh  compile_test.sh  compile_with_plugin.py  dot.sh  pipeline.sh  run.sh
sources/dot_graph/: dot_graph.cpp  graph.cpp
sources/ir_graph/: ir_graph.cpp  ir_graph_builder.cpp  ir_graph_profile.cpp  ir_graph_serde.cpp  ir_graph_to_dot.cpp
sources/llvm_ir_dumper/: dumper_pass.cpp  inject_pass.cpp  pass_api.cpp
sources/llvm_pass/: dynamic_info_pass.cpp  pass_api.cpp  static_info_pass.cpp
sources/tools/: compile_with_plugin_main.cpp  ir_graph_profile_merge_main.cpp  ir_graph_to_dot_main.cpp
sources/utils/: cdfgg.py  graphcc.py  ir_graph_merge_with_profile.cpp  ir_graph_to_dot.cpp  ir_graph_to_dot_main.cpp
